<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_message"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_dialog_email"
        />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_login"
        />
    <item
        android:id="@+id/action_select"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_select"
        />
    <item
        android:id="@+id/action_money"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_money"
        />
    <item
        android:id="@+id/action_advices"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_advices"
        />
    <item
        android:id="@+id/action_recommend"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_recommend"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        />

</menu>
