<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/LinearLayout_SerachJob"
    >
    <TableLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/layout2"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:singleLine="true"
            android:layout_alignParentStart="true"
            android:hint="@string/pleaseInput"
            android:layout_gravity="fill"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/search"
            android:textSize="12sp"
            />
       <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "?android:attr/borderlessButtonStyle"
            android:text="工作地点"
            android:id="@+id/button_location"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "?android:attr/borderlessButtonStyle"
            android:text="职位类别 "
            android:id="@+id/button_leibie"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style = "?android:attr/borderlessButtonStyle"
            android:text="行业类别"
            android:id="@+id/button_hangye"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:drawableRight="@drawable/next"
            android:gravity="center_vertical"
            
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/button_select"
            android:background="#000099"
            android:textColor="#ffff"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            />
    </TableLayout>
   
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageButton
            android:id="@+id/imagebtn_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/recommend"
            android:scaleType="centerCrop"
            style = "?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            />
            <ImageButton
                
            android:id="@+id/imagebtn_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/feedback"
            android:scaleType="centerCrop"
            style = "?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            />
            <ImageButton
            android:id="@+id/imagebtn_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/invite"
            android:scaleType="centerCrop"
            style = "?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            />
            <ImageButton
            android:id="@+id/imagebtn_refurbish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refurbish"
            android:scaleType="centerCrop"
            style = "?android:attr/borderlessButtonStyle"
            android:layout_weight="1"
            />
        </TableRow>
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
            <TextView 
            android:id="@+id/textView_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_recommend"
            android:textSize="12sp"
            android:layout_weight="1"
            android:gravity="center"
            />
            <TextView 
            android:id="@+id/textView_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_feedback"
            android:textSize="12sp"
            android:layout_weight="1"
            android:gravity="center"
            />
            <TextView 
            android:id="@+id/textView_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_invite"
            android:textSize="12sp"
            android:layout_weight="1"
            android:gravity="center"
            />
            <TextView 
            android:id="@+id/textView_refurbish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_refurbish"
            android:textSize="12sp"
            android:layout_weight="1"
            android:gravity="center"
            />
        </TableRow>
        
    </TableLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/image1"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            />
    </RelativeLayout>
        
</RelativeLayout>
